Dev-RBI/src/objects/Visit__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Basement_Floors__c</fullName>
        <label>No. of Basement Floors</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Parking_Floors__c</fullName>
        <label>No.of Parking Floors</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_ResCom_Floors__c</fullName>
        <label>No.of Residential / Commercial Floors</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Construction__c</fullName>
        <label>Construction Status</label>
        <picklist>
            <picklistValues>
                <fullName>Underconstruction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DVU_Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to store DVU agency for DVU Visit</description>
        <label>DVU Agency</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Visits</relationshipLabel>
        <relationshipName>Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Developer_Name__c</fullName>
        <formula>Project__r.Developer_Name__c</formula>
        <label>Developer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deviation__c</fullName>
        <label>Deviation</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cannot Comment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Document_Received_Date__c</fullName>
        <description>Document Received date is formula field to project Document Received date</description>
        <formula>Project__r.Document_Received_date__c</formula>
        <label>Document Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exception__c</fullName>
        <defaultValue>false</defaultValue>
        <description>used to check any Exceptions  are  there  for a visit.</description>
        <label>Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expected_Posession_as_on_today__c</fullName>
        <description>Captured for Followup, FTR visits</description>
        <label>Expected Posession (as on today)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FSI_Constructed_Proposed__c</fullName>
        <description>For Followup, FTR visit</description>
        <label>FSI Constructed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Launched_Units__c</fullName>
        <label>Launched Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legal_Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Legal Agency</description>
        <label>Legal Agency</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Visits (Legal Agency)</relationshipLabel>
        <relationshipName>Visits1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Max_Avg_Developer_BSP_per_Sqft__c</fullName>
        <label>Max Avg Developer BSP(per Sqft)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Max_Avg_Resale_Price_Per_Sqft__c</fullName>
        <label>Max Avg Resale Price (Per Sqft)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Min_Avg_Developer_BSP_per_Sqft__c</fullName>
        <label>Min Avg Developer BSP(per Sqft)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Min_Avg_Resale_Price_Per_Sqft__c</fullName>
        <label>Min Avg Resale Price (Per Sqft)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Planned_Basement_Floors__c</fullName>
        <formula>Tower__r.Planned_Basement_Floors__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No.of Basement Floors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planned_Parking_Floors__c</fullName>
        <formula>Tower__r.Planned_Parking_Floors__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No.of Parking Floors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planned_ResCom_Floors__c</fullName>
        <formula>Tower__r.Planned_ResCom_Floors__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No.of Residential / Commercial Floors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProjecIdVisitType__c</fullName>
        <description>Used in Trigger for duplication.</description>
        <externalId>true</externalId>
        <label>ProjecIdVisitType</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectId__c</fullName>
        <description>Used to convert 15 digit ID to 18.</description>
        <formula>Project__c &amp; 
MID( 
&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;, 
MIN(FIND(MID( Project__c , 5, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 16 + 
MIN(FIND(MID(Project__c , 4, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 8 + 
MIN(FIND(MID(Project__c , 3, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 4 + 
MIN(FIND(MID(Project__c , 2, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 2 + 
MIN(FIND(MID(Project__c , 1, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 1 + 1, 
1) &amp; 
MID( 
&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;, 
MIN(FIND(MID(Project__c , 10, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 16 + 
MIN(FIND(MID(Project__c , 9, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 8 + 
MIN(FIND(MID(Project__c , 8, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 4 + 
MIN(FIND(MID(Project__c , 7, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 2 + 
MIN(FIND(MID(Project__c , 6, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 1 + 1, 
1) &amp; 
MID( 
&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;, 
MIN(FIND(MID(Project__c , 15, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 16 + 
MIN(FIND(MID(Project__c , 14, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 8 + 
MIN(FIND(MID(Project__c , 13, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 4 + 
MIN(FIND(MID(Project__c , 12, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 2 + 
MIN(FIND(MID(Project__c , 11, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 1 + 1, 
1)</formula>
        <label>ProjectId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Address__c</fullName>
        <formula>Project__r.Site_Address_Actual__c</formula>
        <label>Project Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Auto_Num__c</fullName>
        <description>This will capture the auto number field from the associated project.</description>
        <formula>Project__r.Name</formula>
        <label>Project Auto Num</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <formula>Project__r.Project_Name__c</formula>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Site_City__c</fullName>
        <description>This will capture Project Site City.</description>
        <formula>TEXT(Project__r.Site_Address_City__c)</formula>
        <label>Project Site City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Stores relationship with Project</description>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Visits</relationshipLabel>
        <relationshipName>Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposed_Completion_Date__c</fullName>
        <description>Used for Tower Visits</description>
        <inlineHelpText>Used for Tower Visits</inlineHelpText>
        <label>Proposed Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Res_Comm_Compare__c</fullName>
        <description>Used in followup report</description>
        <formula>IF( Actual_ResCom_Floors__c&lt; Planned_ResCom_Floors__c, Actual_ResCom_Floors__c, Planned_ResCom_Floors__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ResComm Compare</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Site_contact_NameDesg__c</fullName>
        <label>Name/Designation of Person</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_Units__c</fullName>
        <label>Sold Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <inlineHelpText>Please enter a value before submitting for approval.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Forwarded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Positive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Query</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Surveyor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Surveyor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Team_Leader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team Leader</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Visits1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Technical_Head__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will capture operation manager. This field is used when the owner is changed in the visit. The value will be same as in the project object</description>
        <label>Operation Mgr Data</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Title_Search_Date__c</fullName>
        <description>For TSR Visit</description>
        <label>Title Search Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TowerVisit_Proj_Name__c</fullName>
        <description>Tower Visit&apos;s Project Name</description>
        <formula>Tower__r.Project__r.Name</formula>
        <label>TowerVisit Proj Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tower__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tower</label>
        <referenceTo>Tower__c</referenceTo>
        <relationshipLabel>Visits</relationshipLabel>
        <relationshipName>Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unique_Key__c</fullName>
        <description>Used for (Visit)duplicate check in trigger.</description>
        <formula>LOWER(  Project_Auto_Num__c  &amp;  TEXT(Visit_Report__c ))</formula>
        <label>Unique Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Verification_Date__c</fullName>
        <description>For DVU Visit</description>
        <label>Verification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Visit_Report__c</fullName>
        <label>Visit Type</label>
        <picklist>
            <picklistValues>
                <fullName>First Technical Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Followup Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DVU Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TSR Report</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Visit_Type_Hyperlink__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; + Id,  TEXT( Visit_Report__c ), &quot;_blank&quot;)</formula>
        <label>Visit Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to relate Tower visit to the respective project visit</description>
        <label>Visit</label>
        <referenceTo>Visit__c</referenceTo>
        <relationshipLabel>Visits</relationshipLabel>
        <relationshipName>Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Visit</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Visit_Report__c</columns>
        <columns>Project_Name__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Closed_Date__c</columns>
        <columns>Surveyor__c</columns>
        <columns>Team_Leader__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ProjVis-{0000000000}</displayFormat>
        <label>Visit Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visits</pluralLabel>
    <recordTypes>
        <fullName>Followup</fullName>
        <active>true</active>
        <description>For Followup Visit</description>
        <label>Followup</label>
    </recordTypes>
    <recordTypes>
        <fullName>Project</fullName>
        <active>true</active>
        <description>Used for Project level visits</description>
        <label>Project</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tower</fullName>
        <active>true</active>
        <description>Indicates Tower level visit</description>
        <label>Tower</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Visit_Start_Date</fullName>
        <active>true</active>
        <description>Visit Start date should be greater than or equals to Today</description>
        <errorConditionFormula>AND (ISNEW(), Start_Date__c  &lt; TODAY())</errorConditionFormula>
        <errorMessage>Start Date cannot be less than Today&apos;s date</errorMessage>
    </validationRules>
</CustomObject>